Remove unnecessary package.json

--- a/.env
+++ b/.env
@@ -14,3 +14,4 @@ DJANGO_SUPERUSER_EMAIL=""
 DJANGO_SUPERUSER_PASSWORD=""
 CREATE_SUPERUSER="True"
 PYTHON_VERSION= 3.13.2
+SECRET_KEY=your-very-strong-and-random-secret-key
